<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Test Application</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="edit_message">Enter a message.</string>
    <string name="login_name">Name</string>
    <string name="login_password">Password</string>
    
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_test_app">My Message</string>
    <string name="title_activity_login">Log In</string>
    <string name="title_activity_register">Register</string>
    <string name="title_login_prompt">Please log in.</string>
    <string name="button_register">Register</string>
    <string name="button_login">Log In</string>
    
    <string name="action_register">Thank you for registering!</string>
    <string name="button_profile">To Profile</string>


	<string name="title_image_banana">Banana Man</string>
</resources>
